# web_11_new

./: alembic.ini  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 1c3c55f283a8_init.py  3cf6a066cf7b_init.py  540780df56bd_init.py  69ffdec0a9ae_update1.py  987506538efa_update2.py  b36ced4635d5_init.py  c207c3897d26_update1.py  d451f0bda051_update.py  d83b34a75b35_init.py
src/: schemas.py
src/database/: config.ini  db.py  models.py
src/repository/: contacts.py
src/routes/: auth.py  contacts.py
src/services/: auth.py
