[tool.poetry]
name = "web-11"
version = "0.1.0"
description = ""
authors = ["Igor-Mozharov <r5@ukr.net>"]
readme = "README.md"
packages = [{include = "web_11"}]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.4"
fastapi = "^0.92.0"
alembic = "^1.9.4"
uvicorn = {extras = ["standart"], version = "^0.20.0"}
psycopg2 = "2.9.0"
pydantic = {extras = ["email"], version = "^1.10.5"}
libgravatar = "^1.0.3"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypy"], version = "^1.7.4"}
python-multipart = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
